<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/book_name"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_header"
                    style="@style/edit_text_style_inside"/>
                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/book_price"
                    android:textSize="@dimen/text_size_header"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    style="@style/edit_text_style_inside"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_owner"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    tools:text="@string/book_author"
                    android:textSize="@dimen/text_size_subheader"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    style="@style/edit_text_style_inside"/>
                <TextView
                    android:id="@+id/product_quantity"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    tools:text="@string/quantity"
                    android:textSize="@dimen/text_size_subheader"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    style="@style/edit_text_style_inside"/>
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/shop_button"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:layout_gravity="center"
            android:src="@drawable/round_basket" />

</LinearLayout>