<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical">

        <!--Book Name, Book Author and Book Price layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/book_name_text_view"
                style="@style/edit_text_style"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/book_name_text_string"
                android:textSize="@dimen/text_size_subheader" />

            <EditText
                android:id="@+id/book_name_edit_text"
                style="@style/edit_text_style_inside"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/book_name_text_string"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/book_author_text_view"
                style="@style/edit_text_style"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/book_author_text_string"
                android:textSize="@dimen/text_size_subheader" />

            <EditText
                android:id="@+id/book_author_edit_text"
                style="@style/edit_text_style_inside"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/book_author_text_string"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/price_text_view"
                style="@style/edit_text_style"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/book_price"
                android:textSize="@dimen/text_size_subheader" />

            <EditText
                android:id="@+id/price_edit_text"
                style="@style/edit_text_style_inside"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/book_price"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>
        <!--end of the Book Name, Author and Price layout-->

        <!--Quantity layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/minus_btn_view"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:scaleType="fitCenter"
                android:src="@drawable/minus_btn" />

            <LinearLayout
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/quantity_text_view"
                    style="@style/edit_text_style_inside"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero_dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textAlignment="center"
                    tools:hint="@string/quantity" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/plus_btn_view"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:scaleType="fitCenter"
                android:src="@drawable/plus_btn" />
        </LinearLayout>
        <!--End of Quantity layout-->

        <!--Supplier layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/supplier_text_view"
                        style="@style/edit_text_style"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:text="@string/supplier_name"
                        android:textSize="@dimen/text_size_subheader" />

                    <EditText
                        android:id="@+id/supplier_edit_text"
                        style="@style/edit_text_style_inside"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:hint="@string/supplier_name"
                        android:textSize="@dimen/text_size_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/supplier_number_text_view"
                        style="@style/edit_text_style"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="@string/supplier_phone_number"
                        android:textSize="@dimen/text_size_subheader" />

                    <EditText
                        android:id="@+id/supplier_number_edit_text"
                        style="@style/edit_text_style_inside"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:hint="@string/supplier_phone_number"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/text_size_small" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/order_btn"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/order_btn"
                android:textAlignment="center" />

        </LinearLayout>
        <!--End of supplier layout-->

    </LinearLayout>

</ScrollView>